book-phase-4: Book-based snapshot assembly, field-granular dataQuality, persistence
UA/OI scanner now writes its results into the Book (timestamped): a
background loop scans the watchlist every book.scan-interval-ms, snapshot
assembly reads scan results, quotes, metrics and auction from the Book —
an OI profile from 40 minutes ago is served and honestly labeled as such.
Scans are serialized per ticker (single-writer contract of the Book's scan
fields); a failed/empty scan never overwrites the last honest result.
Non-watchlist tickers scan on demand, deduped via the Book's own scan age
(book.scan-refresh-seconds) — this replaces the former options cache.

Additive dataQuality block in the snapshot JSON (Book symbols only):
connectionLost, IBKR marketDataType (1/2/3/4), and per section
(quote/optionsMetrics/auction/uaScan) ageSeconds, changedAgeSeconds,
invalidated and a market-state-aware stale flag (REGULAR-gated; auction
gated by NOII window instead). Persisted to the new additive
data_quality_json column (docs/migration-2026-07-10-data-quality.sql,
applied manually; base schema updated for fresh installs).

Persistence quality gate is now field-granular for Book snapshots: a fresh
quote with a stale IV is persisted with the IV flagged in data_quality_json
instead of being blocked; only a never-seen quote section (or CLOSED market,
rule unchanged) skips the write. The old volume+open stale-tick-signature
rule remains only for scraper-served tickers, where it still applies.
DerivedMetricsService refuses stale inputs for delta fields (priceDeltaPct/
volumeDelta on stale quote, oiPutCallRatioDelta on stale scan) — a delta
against an outage-frozen value measures the outage, not the market.

README and docs describe only the Book architecture now.

Deletions:
- the 120s 'options' Caffeine cache (CacheConfig registration, optionsTtl,
  config key cache.options.ttl-seconds) and @Cacheable on getOptions —
  the Book with its scan timestamps replaces it (deferred here from 